--- a/app/views/02_surrender_location.html
+++ b/app/views/02_surrender_location.html
@@ -28,11 +28,11 @@
                         <div class="govuk-radios" data-module="govuk-radios">
                             <div class="govuk-radios__item">
                                 <input class="govuk-radios__input" id="surrender_location-sellers_country" name="surrender_location" type="radio" value="sellers_country">
-                                <label class="govuk-label govuk-radios__label" for="surrender_location-sellers_country">Seller's country</label>
+                                <label class="govuk-label govuk-radios__label" for="surrender_location-sellers_country">The seller's country</label>
                             </div>
                             <div class="govuk-radios__item">
                                 <input class="govuk-radios__input" id="surrender_location-buyers_country" name="surrender_location" type="radio" value="buyers_country">
-                                <label class="govuk-label govuk-radios__label" for="surrender_location-buyers_country">Buyer's country</label>
+                                <label class="govuk-label govuk-radios__label" for="surrender_location-buyers_country">The buyer's country</label>
                             </div>
                         </div>
 
