--- a/app/views/03_sellers_country_location.html
+++ b/app/views/03_sellers_country_location.html
@@ -27,7 +27,7 @@
                         <div class="govuk-radios" data-module="govuk-radios">
                             <div class="govuk-radios__item">
                                 <input class="govuk-radios__input" id="sellers_country_location-sellers_premises" name="sellers_country_location" type="radio" value="sellers_premises">
-                                <label class="govuk-label govuk-radios__label" for="sellers_country_location-sellers_premises">Seller's premises</label>
+                                <label class="govuk-label govuk-radios__label" for="sellers_country_location-sellers_premises">The seller's premises</label>
                             </div>
                             {% if inco_context.is_water %}
                                 <div class="govuk-radios__item">
