--- a/app/views/04_buyers_country_location.html
+++ b/app/views/04_buyers_country_location.html
@@ -29,12 +29,12 @@
                                 <label class="govuk-label govuk-radios__label" for="buyers_country_location-port_of_destination">Port of destination</label>
                             </div>
                             <div class="govuk-radios__item">
-                                <input class="govuk-radios__input" id="buyers_country_location-other_locations" name="buyers_country_location" type="radio" value="other_locations">
-                                <label class="govuk-label govuk-radios__label" for="buyers_country_location-other_locations">Other locations</label>
+                                <input class="govuk-radios__input" id="buyers_country_location-buyers_premises" name="buyers_country_location" type="radio" value="buyers_premises">
+                                <label class="govuk-label govuk-radios__label" for="buyers_country_location-buyers_premises">The buyer's premises</label>
                             </div>
                             <div class="govuk-radios__item">
-                                <input class="govuk-radios__input" id="buyers_country_location-buyers_premises" name="buyers_country_location" type="radio" value="buyers_premises">
-                                <label class="govuk-label govuk-radios__label" for="buyers_country_location-buyers_premises">Buyer's premises</label>
+                                <input class="govuk-radios__input" id="buyers_country_location-other_locations" name="buyers_country_location" type="radio" value="other_locations">
+                                <label class="govuk-label govuk-radios__label" for="buyers_country_location-other_locations">Other locations</label>
                             </div>
                         </div>
 
