--- a/app/views/05_export_clearance.html
+++ b/app/views/05_export_clearance.html
@@ -26,11 +26,11 @@
                         <div class="govuk-radios" data-module="govuk-radios">
                             <div class="govuk-radios__item">
                                 <input class="govuk-radios__input" id="export_clearance-buyer" name="export_clearance" type="radio" value="buyer">
-                                <label class="govuk-label govuk-radios__label" for="export_clearance-buyer">Buyer</label>
+                                <label class="govuk-label govuk-radios__label" for="export_clearance-buyer">The buyer</label>
                             </div>
                             <div class="govuk-radios__item">
                                 <input class="govuk-radios__input" id="export_clearance-seller" name="export_clearance" type="radio" value="seller">
-                                <label class="govuk-label govuk-radios__label" for="export_clearance-seller">Seller</label>
+                                <label class="govuk-label govuk-radios__label" for="export_clearance-seller">The seller</label>
                             </div>
                         </div>
 
