--- a/app/views/06_unloading.html
+++ b/app/views/06_unloading.html
@@ -26,11 +26,11 @@
                         <div class="govuk-radios" data-module="govuk-radios">
                             <div class="govuk-radios__item">
                                 <input class="govuk-radios__input" id="unloading-seller" name="unloading" type="radio" value="seller">
-                                <label class="govuk-label govuk-radios__label" for="unloading-seller">Seller</label>
+                                <label class="govuk-label govuk-radios__label" for="unloading-seller">The seller</label>
                             </div>
                             <div class="govuk-radios__item">
                                 <input class="govuk-radios__input" id="unloading-buyer" name="unloading" type="radio" value="buyer">
-                                <label class="govuk-label govuk-radios__label" for="unloading-buyer">Buyer</label>
+                                <label class="govuk-label govuk-radios__label" for="unloading-buyer">The buyer</label>
                             </div>
                         </div>
 
