--- a/app/views/07_insurance.html
+++ b/app/views/07_insurance.html
@@ -26,11 +26,11 @@
                         <div class="govuk-radios" data-module="govuk-radios">
                             <div class="govuk-radios__item">
                                 <input class="govuk-radios__input" id="insurance-seller" name="insurance" type="radio" value="seller">
-                                <label class="govuk-label govuk-radios__label" for="insurance-seller">Seller</label>
+                                <label class="govuk-label govuk-radios__label" for="insurance-seller">The seller</label>
                             </div>
                             <div class="govuk-radios__item">
                                 <input class="govuk-radios__input" id="insurance-buyer" name="insurance" type="radio" value="buyer">
-                                <label class="govuk-label govuk-radios__label" for="insurance-buyer">Buyer</label>
+                                <label class="govuk-label govuk-radios__label" for="insurance-buyer">The buyer</label>
                             </div>
                         </div>
 
