--- a/app/views/99_dap.html
+++ b/app/views/99_dap.html
@@ -18,7 +18,7 @@
             <h2 class="govuk-heading-m">Arrival Point</h2>
             <p>The buyer is responsible for import customs clearance plus any local taxes and import duties, with the seller responsible for arranging and delivering the goods to a named destination, which might be a port or airport in the buyer’s country. However, the seller is not responsible for unloading the goods at the named place.</p>
 
-            <h2 class="govuk-heading-m">Buyer’s Premises</h2>
+            <h2 class="govuk-heading-m">The buyer’s Premises</h2>
             <p>The seller bears the cost, risk and responsibility for goods until they arrive at the buyer’s premises in the country of destination, but not unloading the goods from the delivering transport. The buyer is responsible for import customs clearance and the payment of import duties/taxes, with the seller responsible for export clearance. The seller has the option to revert to DAP Arrival Point if import formalities are not completed in a reasonable time.
             </p>
 
