--- a/app/views/99_fca.html
+++ b/app/views/99_fca.html
@@ -16,7 +16,7 @@
             <span class="govuk-caption-xl">Incoterms selector</span>
             <h1 class="govuk-heading-xl">FCA (Free Carrier)</h1>
 
-            <h2 class="govuk-heading-m">Seller’s Premises</h2>
+            <h2 class="govuk-heading-m">The seller’s Premises</h2>
             <p>As outlined above, this term should be used instead of EXW (Ex Works), which is widely misused for exports. Under this term, the seller bears all risks and costs up to and including loading the goods onto the vehicle at their premises. The seller also has an obligation to arrange export documentation and clear export customs. If used for ocean freight, the seller can obtain a bill of lading.</p>
 
             <h2 class="govuk-heading-m">Named Place</h2>
