--- a/app/views/09_freight.html
+++ b/app/views/09_freight.html
@@ -26,11 +26,11 @@
                         <div class="govuk-radios" data-module="govuk-radios">
                             <div class="govuk-radios__item">
                                 <input class="govuk-radios__input" id="freight-buyer" name="freight" type="radio" value="buyer">
-                                <label class="govuk-label govuk-radios__label" for="freight-buyer">Buyer</label>
+                                <label class="govuk-label govuk-radios__label" for="freight-buyer">The buyer</label>
                             </div>
                             <div class="govuk-radios__item">
                                 <input class="govuk-radios__input" id="freight-seller" name="freight" type="radio" value="seller">
-                                <label class="govuk-label govuk-radios__label" for="freight-seller">Seller</label>
+                                <label class="govuk-label govuk-radios__label" for="freight-seller">The seller</label>
                             </div>
                         </div>
 
