--- a/app/views/01_mode.html
+++ b/app/views/01_mode.html
@@ -52,6 +52,7 @@
                 </div>
                 <button class="govuk-button" data-module="govuk-button">Continue</button>
             </form>
+            {% include "includes/logic.html" %}
         </div>
     </div>
 {% endblock %}
