--- a/app/views/02_surrender_location.html
+++ b/app/views/02_surrender_location.html
@@ -40,6 +40,7 @@
                 </div>
                 <button class="govuk-button" data-module="govuk-button">Continue</button>
             </form>
+            {% include "includes/logic.html" %}
         </div>
     </div>
 
