--- a/app/views/09_freight.html
+++ b/app/views/09_freight.html
@@ -38,6 +38,7 @@
                 </div>
                 <button class="govuk-button" data-module="govuk-button">Continue</button>
             </form>
+            {% include "includes/logic.html" %}
         </div>
     </div>
 
