--- a/app/views/99_cif.html
+++ b/app/views/99_cif.html
@@ -21,6 +21,7 @@
                 text: "Start again",
                 href: "/mode_of_transport"
             }) }}
+            {% include "includes/logic.html" %}
         </div>
     </div>
 
