--- a/app/views/99_cpt.html
+++ b/app/views/99_cpt.html
@@ -23,6 +23,7 @@
                 text: "Start again",
                 href: "/mode_of_transport"
             }) }}
+            {% include "includes/logic.html" %}
         </div>
     </div>
 
