--- a/app/views/99_fca.html
+++ b/app/views/99_fca.html
@@ -26,6 +26,7 @@
                 text: "Start again",
                 href: "/mode_of_transport"
             }) }}
+            {% include "includes/logic.html" %}
         </div>
     </div>
 
