--- a/app/views/99_fob.html
+++ b/app/views/99_fob.html
@@ -22,6 +22,7 @@
                 text: "Start again",
                 href: "/mode_of_transport"
             }) }}
+            {% include "includes/logic.html" %}
         </div>
     </div>
 
