--- a/app/views/01_mode.html
+++ b/app/views/01_mode.html
@@ -25,23 +25,14 @@
                             <div class="govuk-radios__item">
                                 <input class="govuk-radios__input" id="mode_of_transport-inland_water" name="mode_of_transport" type="radio" value="inland_water">
                                 <label class="govuk-label govuk-radios__label" for="mode_of_transport-inland_water">Inland water</label>
-                                <div class="govuk-hint govuk-radios__hint">
-                                    Unlikely to be needed for UK
-                                </div>
                             </div>
                             <div class="govuk-radios__item">
                                 <input class="govuk-radios__input" id="mode_of_transport-land" name="mode_of_transport" type="radio" value="land">
                                 <label class="govuk-label govuk-radios__label" for="mode_of_transport-land">Land</label>
-                                <div class="govuk-hint govuk-radios__hint">
-                                    Unlikely to be needed for UK
-                                </div>
                             </div>
                             <div class="govuk-radios__item">
                                 <input class="govuk-radios__input" id="mode_of_transport-rail" name="mode_of_transport" type="radio" value="rail">
                                 <label class="govuk-label govuk-radios__label" for="mode_of_transport-rail">Rail</label>
-                                <div class="govuk-hint govuk-radios__hint">
-                                    Unlikely to be needed for UK
-                                </div>
                             </div>
                             <div class="govuk-radios__item">
                                 <input class="govuk-radios__input" id="mode_of_transport-sea" name="mode_of_transport" type="radio" value="sea">
@@ -52,6 +43,7 @@
                 </div>
                 <button class="govuk-button" data-module="govuk-button">Continue</button>
             </form>
+            <p class="em">Rail, land and inland waterways are unlikely to be needed for UK.</p>
             {% include "includes/logic.html" %}
         </div>
     </div>
